--- a/angular.json
+++ b/angular.json
@@ -31,9 +31,19 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.sass"
+              "src/styles.sass",
+              "node_modules/bootstrap/dist/css/bootstrap.css",
+              "node_modules/font-awesome/css/font-awesome.css",
+              "node_modules/swiper/swiper.scss"
             ],
-            "scripts": []
+            "scripts": [
+             "node_modules/bootstrap/dist/js/bootstrap.js",
+             "node_modules/bootstrap/dist/js/bootstrap.bundle.js",
+             "node_modules/swiper/swiper-bundle.js",
+             "src/script.js"
+
+            
+            ]
           },
           "configurations": {
             "production": {
