--- a/package.json
+++ b/package.json
@@ -18,7 +18,16 @@
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
+    "@fortawesome/angular-fontawesome": "^0.10.2",
+    "@fortawesome/fontawesome-svg-core": "^6.2.0",
+    "@fortawesome/free-solid-svg-icons": "^6.2.0",
+    "bootstrap": "^5.2.0",
+    "font-awesome": "^4.7.0",
+    "jquery": "^3.6.1",
     "rxjs": "~7.5.0",
+    "save": "^2.5.0",
+    "swiper": "^8.3.2",
+    "ts-md5": "^1.3.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
@@ -27,6 +36,7 @@
     "@angular/cli": "~13.3.4",
     "@angular/compiler-cli": "~13.3.0",
     "@types/jasmine": "~3.10.0",
+    "@types/jquery": "^3.5.14",
     "@types/node": "^12.11.1",
     "jasmine-core": "~4.0.0",
     "karma": "~6.3.0",
